add update analysis category method and endpoint
